[package]
name = "portfolio_be"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
argon2 = "0.5.3"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
config = "0.15.9"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
redis = { version = "0.29.1", features = ["connection-manager", "tokio-comp"] }
reqwest = { version = "0.12.12", features = ["json"] }
scraper = "0.23.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
] }
thiserror = "2.0.12"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.44.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
